--- a/Tic-Tac-Toe/Base.lproj/Main.storyboard
+++ b/Tic-Tac-Toe/Base.lproj/Main.storyboard
@@ -24,6 +24,7 @@
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tic-Tac-Toe!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ci-o1-rzC">
                                 <rect key="frame" x="105.5" y="20" width="165.5" height="36"/>
+                                <accessibility key="accessibilityConfiguration" identifier="game_title"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
